--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 async-recursion = "1.1.1"
+flint3-sys = { version = "3.3.1", features = ["gmp-mpfr-sys"] }
 gmp-mpfr-sys = "1.6.8"
 tokio = { version = "1.49.0", features = ["full"] }
